<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hsarme.teya.parking.logIn">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="19dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <Button
        android:id="@+id/btIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="154dp" />

    <Button
        android:id="@+id/btnup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="447dp" />
</android.support.constraint.ConstraintLayout>
