<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hsarme.teya.parking.Signup">

    <EditText
        android:id="@+id/etname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="131dp" />

    <EditText
        android:id="@+id/etpas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="186dp" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="452dp" />
</LinearLayout>
